# pyadina3

./: .gitattributes  .gitignore  config.json  index.html  pyadina-run.spec  pyadina.spec  pyproject.toml  readme.md  requirements.txt  setup.py
migrations/: 20230629115240_init.py  20230629134014_alter_orders.py  20230629134910_alter_order_add_date.py
printing/: Connector.py  Printing.py  __init__.py
static/: index.html  main.js  style.css
storage/: Storage.py
